chore: 티켓 이미지를 이모지로 대체
Co-authored-by: moonheekim0118 <hellomooneekim@gmail.com>

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -183,9 +183,7 @@ h1 {
 
 .lotto-list__ticket {
   display: inline-block;
-  background-image: url('../../images/lotto_ticket.svg');
-  width: 34px;
-  height: 36px;
+  font-size: 34px;
   margin-right: 8px;
 }
 
