feat: 금액 입력 전, lotto-list-section 숨기기
Co-authored-by: moonheekim0118 <hellomooneekim@gmail.com>

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -89,6 +89,10 @@ h1 {
   width: 100%;
 }
 
+.lotto-list__section-display-none {
+  display: none;
+}
+
 .lotto-list__header {
   display: flex;
   justify-content: space-between;
